--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -203,13 +203,13 @@
             </div>
             </div>
           </div>
-          <div class="row">
+          <!-- <div class="row">
             <ul class="ngucarousel-indicator-one" NguCarouselPoint>
               <li *ngFor="let pointer of solutionCarousel.pointNumbers; let i = index">
                 <a (click)="solutionCarousel.moveTo(i)" [class.active]="solutionCarousel.activePoint == i">&nbsp;</a>
               </li>
             </ul>
-          </div>
+          </div> -->
         </div>
       </ngu-tile>
       <ul class="ngucarousel-indicator-two" NguCarouselPoint>
