--- a/src/app/components/projects/car-usability-testing/car-usability-testing.component.html
+++ b/src/app/components/projects/car-usability-testing/car-usability-testing.component.html
@@ -3,9 +3,9 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-      <h1>Automobile Usability Testing</h1>
+      <h1>AUTOMOBILE USABILITY TESTING</h1>
     </div>
-      <div class="col-md-6">
+      <div class="col-md-8">
         <p>A multi-national automobile manufacturing company approached us for Usability Testing of alert system for their luxury segment vehicles to be launched Asian Market.</p>
     </div>
     </div>
@@ -25,7 +25,7 @@
 <section class="about-project">
   <div class="container">
     <div class="heading">
-      <h1>About Project</h1>
+      <h1>ABOUT PROJECT</h1>
     </div>
     <div class="row">
       <div class="col-md-5">
@@ -55,7 +55,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-      <h1>Testing Process</h1>
+      <h1>TESTING PROCESS</h1>
     </div>
   </div>
     <div class="row">
@@ -97,7 +97,7 @@
 <section class="other-works">
   <div class="container">
     <div class="other-works-heading">
-        <h3>Other Works</h3>
+        <h3>OTHER WORKS</h3>
     </div>
     <div class="other-works-body">
         <div class="row space">
