--- a/src/app/components/projects/event-management/event-management.component.html
+++ b/src/app/components/projects/event-management/event-management.component.html
@@ -6,8 +6,8 @@
             <div class="project-detail-wrap">
               <div class="project-detail">
                 <div class="project-logo">
-                    <h2>Event</h2>
-                    <h5>Management</h5>
+                    <h2>EVENT</h2>
+                    <h5>MANAGEMENT</h5>
                     <p>Platform for Venues Owners & Professionals to 
                       showcase their Venues and Services and find their customers online.</p>
                 </div>
@@ -29,7 +29,7 @@
       <div class="container">
       <div class="row">
         <div class="col-12">
-          <h2>About Project</h2>
+          <h2>ABOUT PROJECT</h2>
         </div>
         <div class="col-md-5">
         <p>Business segments like Hotel Management, Wedding Halls, Decorators, Photographers, Make-up Artists, Fashion Designers lean more and more into social media (Instagram & Facebook) to showcase their professional services. 
@@ -57,7 +57,7 @@
       <div class="container">
       <div class="row">
         <div class="col-12">
-          <h2>Process</h2>
+          <h2>PROCESS</h2>
         </div>
       </div>
       <div class="row">
@@ -108,7 +108,7 @@
       <div class="container">
       <div class="row research">
         <div class="col-12">
-          <h2>Research</h2>
+          <h2>RESEARCH</h2>
         </div>
       </div>
       <div class="row research1">
@@ -173,7 +173,7 @@
       <div class="container">
       <div class="row">
           <div class="col-md-6">
-             <h2> <img src="/assets/images/projects/event-management/em8.png" />Challenges</h2>
+             <h2> <img src="/assets/images/projects/event-management/em8.png" />CHALLENGES</h2>
              <p>- Decidophobia, Dilemma of selecting an option</p>
               <p>- Not having a clarity on the cost of the service</p>
               <p>- How skilled is this service provider?</p>
@@ -182,7 +182,7 @@
               <p>- How to get in touch with the right service provider?</p>
           </div>
           <div class="col-md-6">
-            <h2> <img src="/assets/images/projects/event-management/em8.png" />Needs</h2>
+            <h2> <img src="/assets/images/projects/event-management/em8.png" />NEEDS</h2>
             <p>- Shortlisted set of services that match your budget and spl. occasion</p>
             <p>- Break down of the total cost for the service</p>
             <p>- Similar works, Testimonials, Videos</p>
@@ -196,7 +196,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h2>Design</h2>
+            <h2>DESIGN</h2>
           </div>
         </div>
         <div class="row">
@@ -229,7 +229,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h2>Interface Design</h2>
+            <h2>INTERFACE DESIGN</h2>
           </div>
           <div class="col-12">
             <div class="step-image">
@@ -243,7 +243,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2>Logo</h2>
+            <h2>LOGO</h2>
           </div>
         </div>
         <div class="row">
@@ -261,7 +261,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <h2>Components</h2>
+            <h2>COMPONENTS</h2>
           </div>
         </div>
         <div class="row">
@@ -295,8 +295,8 @@
         <div class="row">
           <div class="col-md-4">
             <div class="container">
-            <h2>Responsive 
-              Screens</h2>
+            <h2>RESPONSIVE 
+              SCREENS</h2>
               <p>Shortlisted set of services that match
               your budget and spl. occasion
               Break down of the total cost for the service
@@ -317,7 +317,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h2>Web View</h2>
+            <h2>WEB VIEW</h2>
           </div>
         </div>
         <div class="row">
@@ -358,7 +358,7 @@
   <section class="other-works">
       <div class="container">
         <div class="other-works-heading">
-            <h3>Other Works</h3>
+            <h3>OTHER WORKS</h3>
         </div>
         <div class="other-works-body">
           <div class="row space">
