--- a/src/app/components/projects/health/health.component.html
+++ b/src/app/components/projects/health/health.component.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <h1>Health Buy</h1>
+        <h1>HEALTH BUY</h1>
         <p>A startup focused on SaaS solutions that empower local communities, globally for healthy food produce</p>
       </div>
       <div class="col-md-6">
@@ -20,7 +20,7 @@
 <section class="about-project">
   <div class="container">
     <div class="heading">
-      <h1>About Project</h1>
+      <h1>ABOUT PROJECT</h1>
     </div>
     <div class="row">
       <div class="col-md-5">
@@ -53,7 +53,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-        <h1>Process</h1>
+        <h1>PROCESS</h1>
       </div>
       </div>
       <div class="row">
@@ -75,7 +75,7 @@
   <!-- Research -->
   <section class="research">
     <div class="container">
-      <h1>Research</h1>
+      <h1>RESEARCH</h1>
         <div class="row research1">
           <div class="col-md-3">
             <h3>Goal</h3>
@@ -138,7 +138,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-5">
-        <h1>Users Journey</h1>
+        <h1>USERS JOURNY</h1>
         <p>The wide range of User Challenges and User needs collated from all % user groups was 
           narrowed down to a limited number which will be addressed in the first phase of 
           the design Process</p>
@@ -165,7 +165,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <h3>Challenges</h3>
+        <h3>CHALLENGES</h3>
         <p>- Planning a list of buying product</p>
         <p>- Identifying the right and trust worthy shop</p>
         <p>- Don't have knowledge about how much quantity to buy for family</p>
@@ -173,7 +173,7 @@
         <p>- People forgot to at least one product in their list</p>
       </div>
       <div class="col-md-6">
-        <h3>Needs</h3>
+        <h3>NEEDS</h3>
         <p>- Weekly pre-planned vegetable + groceries list for the whole family</p>
         <p>- A place to buy goods in fast and easy way</p>
         <p>- A Food Chart to avoid "daily new recipe" confusion</p>
@@ -199,7 +199,7 @@
      <div class="container">
        <div class="row">
          <div class="col-md-3">
-           <h1>Other Screens</h1>
+           <h1>OTHER SCREENS</h1>
          </div>
          <div class="col-md-1"></div>
          <div class="col-md-8">
@@ -226,7 +226,7 @@
   <section class="other-works">
     <div class="container">
       <div class="other-works-heading">
-          <h3>Other Works</h3>
+          <h3>OTHER WORKS</h3>
       </div>
       <div class="other-works-body">
           <div class="row space">
