--- a/src/app/components/projects/marketing/marketing.component.html
+++ b/src/app/components/projects/marketing/marketing.component.html
@@ -30,7 +30,7 @@
 <section class="about-project">
     <div class="container">
       <div class="heading">
-        <h1>About Project</h1>
+        <h1>ABOUT PROJECT</h1>
       </div>
       <div class="row">
         <div class="col-md-5">
@@ -65,7 +65,7 @@
     <div class="container">
     <div class="row">
     <div class="col-md-4">
-        <h1>Branding</h1>
+        <h1>BRANDING</h1>
     </div>
     <div class="col-md-8">
         <p>The primary goal of the branding exercise was to create an identity that shows focus and 
@@ -96,7 +96,7 @@
 <!-- Style Guide -->
 <section class="style-guide">
     <div class="container">
-        <h1>Style Guide</h1>
+        <h1>STYLE GUIDE</h1>
         <div class="row">
             <div class="col-md-6">
                 <h3>Colors Used</h3>
@@ -132,7 +132,7 @@
 <!-- Illustrations -->
 <section class="illustration">
     <div class="container">
-        <h3>Illustrations</h3>
+        <h3>ILLUSTRATIONS</h3>
         <div class="row">
             <div class="col-md-4">
                 <div class="pic1">
@@ -168,7 +168,7 @@
 <section class="web-view">
     <div class="container">
         <div class="heading">
-        <h1>Web View</h1>
+        <h1>WEB VIEW</h1>
         <div class="step-image">
         <img src="/assets/images/projects/marketing/web-view.png">
     </div>
@@ -204,7 +204,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-            <h1>Responsive Screens</h1>
+            <h1>RESPONSIVE SCREENS</h1>
         </div>
         </div>
         <div class="row">
@@ -220,7 +220,7 @@
   <section class="other-works">
       <div class="container">
         <div class="other-works-heading">
-            <h3>Other Works</h3>
+            <h3>OTHER WORKS</h3>
         </div>
         <div class="other-works-body">
             <div class="row space">
