--- a/src/app/components/projects/social-review/social-review.component.html
+++ b/src/app/components/projects/social-review/social-review.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-6">
         <div class="heading">
-            <h1>Social Marketing</h1>
+            <h1>SOCIAL MARKETING</h1>
             <!-- <h3>Management</h3> -->
             <p>The SaaS product for Customer Advocacy platform to promoting word of mouth review for
               sustainable growth and to increase credibility.
@@ -29,7 +29,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <h1>About Project</h1>
+        <h1>ABOUT PROJECT</h1>
       </div>
       <div class="col-md-6">
         <p>The platform allows to collect different source of reviews by business that enables a better reach through customer voice. 
@@ -54,7 +54,7 @@
     <!-- Process -->
     <section class="process">
       <div class="container">
-        <h1>Process</h1>
+        <h1>PROCESS</h1>
       <div class="row">
         <div class="col-sm-3">
           <div class="step-image1">
@@ -99,7 +99,7 @@
     <!-- Research -->
     <section class="research">
       <div class="container">
-          <h1>Research</h1>
+          <h1>RESEARCH</h1>
         <div class="row">
           <div class="col-md-6">
             <h3>Discovery and Analysis</h3>
@@ -128,17 +128,18 @@
 <section class="challenges-needs">
   <div class="container">
     <div class="row">
-      <div class="col-md-3"></div>
+      <div class="col-md-2"></div>
       <div class="col-md-3">
-        <h3>Challenges</h3>
+        <h3>CHALLENGES</h3>
         <p>- Getting Testimonials</p>
         <p>- Scattered Management</p>
         <p>- Manual Work</p>
         <p>- Losing Track of Customers</p>
         <p>- Feedback Mechanism</p>
       </div>
+      <div class="col-md-2"></div>
       <div class="col-md-3">
-        <h3>Needs</h3>
+        <h3>NEEDS</h3>
         <p>- Fast and Simple Design</p>
         <p>- Track Activity and Daily Tasks</p>
         <p>- Motivation & Appreciation</p>
@@ -147,7 +148,7 @@
         <p>- Getting Testimonials</p>
         <p>- Social Status</p>
       </div>
-      <div class="col-md-3"></div>
+      <div class="col-md-2"></div>
     </div>
   </div>
 </section>
@@ -156,7 +157,7 @@
 <!-- Interface design -->
 <section class="interface">
   <div class="container">
-      <h1>Interface Design</h1>
+      <h1>INTERFACE DESIGN</h1>
    <div class="image">
   <div class="step-image">
     <img src="/assets/images/projects/social-review/interface.png" />
@@ -169,7 +170,7 @@
 <!-- Design system -->
 <section class="design-system">
   <div class="container">
-      <h1>Design System</h1>
+      <h1>DESIGN SYSTEM</h1>
    <div class="image">
   <div class="step-image">
     <img src="/assets/images/projects/social-review/design-sys.png" />
@@ -182,7 +183,7 @@
 <!-- Icons & illustration -->
 <section class="icons">
   <div class="container">
-    <h1>Icons & Illustration</h1>
+    <h1>ICONS & ILLUSTRATION</h1>
     <div class="image">
       <div class="step-image">
         <img src="/assets/images/projects/social-review/ws.png" />
@@ -199,7 +200,7 @@
 <section class="web-view">
   <div class="container">
       <div class="heading">
-      <h1>Web View</h1>
+      <h1>WEB VIEW</h1>
       <div class="step-image">
       <img src="/assets/images/projects/social-review/social.png">
     </div>
@@ -234,7 +235,7 @@
 <section class="other-works">
   <div class="container">
     <div class="other-works-heading">
-        <h3>Other Works</h3>
+        <h3>OTHER WORKS</h3>
     </div>
     <div class="other-works-body">
       <div class="row space">
