--- a/src/app/components/services/back-end-development/back-end-development.component.html
+++ b/src/app/components/services/back-end-development/back-end-development.component.html
@@ -3,7 +3,7 @@
       <div class="searvice-jumbotron-inner">
           <div class="row">
               <div class="col-md-5">
-                  <h1><span class="highlight"> End to End</span> Development</h1>
+                  <h1><span class="highlight"> END TO END</span> DEVELOPMENT</h1>
                   <p>Designing scalable platform harnessing the technology for business reach to their end users with the better user experience, engagement and adaptablity.</p>
                       <h3><img src="/assets/images/services/ee-1.svg" alt="" /><span class="list">Understanding System</span></h3>
                       <h3><img src="/assets/images/services/ee-2.svg" alt="" /><span class="list">Defining Tech Stack</span></h3>
@@ -19,7 +19,7 @@
           </div>
           <div class="row spacing">
               <div class="col-md-6">
-                  <h5>Understanding the System</h5>
+                  <h5>UNDERSTANDING THE SYSTEM</h5>
                   <p>We draw the System Roadmap based on the Design Strategy for a better Usability. In this approach we have a clear roadmap that encompasses multiple factors like Defined User Base, quantum & type of data. 
                     This set-up allows the well defined ecosystem to boost the performance, enhance scalability to alignment with the Product Vision, also get started with minimal fuss.
                 </p>
@@ -38,7 +38,7 @@
   <div class="container">
       <div class="row">
         <div class="col-md-12">
-        <h5>Tech Stack</h5>
+        <h5>TECH STACK</h5>
         <p>We choose the right Tech Stack based on the detailed Analysis of User Behaviour and the Business needs in terms of, ease of use scalability interoperability with standardization adaptability with emerging trends integration with array of UI platforms (Responsive, Android, iOS & Wearables)</p>
         </div>
       </div>
@@ -82,7 +82,7 @@
   <div class="container">
       <div class="row">
         <div class="col-md-6 m-first">
-         <h5>Implementation</h5>
+         <h5>IMPLEMENTATION</h5>
           <p>We define the stubs in correlation with the Interface needs with scope for future enhancements with minimal changes. The API driven development allows us to integrate with multiple platforms and services in agile mode.
              We manage the code via Git repositories for a hassle free hand-over and deployment. 
           </p>
@@ -100,7 +100,7 @@
           </div>
                </div>
           <div class="col-md-6 m-first">
-              <h5>Testing & Support</h5>
+              <h5>TESTING & SUPPORT</h5>
               <p>Quality is the key for any product success, with a well-defined quality process we delivery the product or application that are ready for go-live.</p>
               <p>With the core implementation done there is always scope for changes and customer exprience enhancements for which we work along with your team in Release/Patch Managment to suite the end-user demand.</p>
           </div>
@@ -121,7 +121,7 @@
             <div class="col-md-1"></div>
             <div class="col-md-10">
            <div class="text">
-             <h5>Web Development</h5>
+             <h5>WEB DEVELOPMENT</h5>
             <p>The portal was designed for a conglomerate with Global Operations to showcase their portfolio of works; the portal with rich UI for statistical and graphical representation used predominantly by Sales Team for proposal initiative.
             The portal demands for an aesthetic interface with a robust end-to-end framework to hold the statistical information.</p>
           <a routerLink="/projects/web-development"><h3>VIEW CASE STUDY  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
@@ -138,7 +138,7 @@
 <div class="services">
   <div class="container">
       <div class="services-heading">
-          <h5>Other Services</h5>
+          <h5>OTHER SERVICES</h5>
       </div>
       <div class="service-body">
           <div class="row">
