--- a/src/app/components/services/front-end-development/development.component.html
+++ b/src/app/components/services/front-end-development/development.component.html
@@ -3,7 +3,7 @@
         <div class="searvice-jumbotron-inner">
             <div class="row">
                 <div class="col-md-5">
-                    <h1><span class="highlight"> UI</span> Development</h1>
+                    <h1><span class="highlight"> UI</span> DEVELOPMENT</h1>
                     <p>The design comes to life when the robust technologies are put in place to experience the best</p>
                         <h3><img src="/assets/images/services/ui-1.svg" alt="" /><span class="list">Business Understanding</span></h3>
                         <h3><img src="/assets/images/services/ui-2.svg" alt="" /><span class="list">Platform</span></h3>
@@ -21,7 +21,7 @@
             </div>
             <div class="row spacing">
                 <div class="col-md-6">
-                    <h5>Business <span class="highlight">Understanding</span></h5>
+                    <h5>BUSINESS <span class="highlight">UNDERSTANDING</span></h5>
                     <p>When it comes to selecting a platform it can be challenging, since that defines how the product can or cannot expand in future without technical boundaries. 
                         We strongly believe technology should aid a Product in scaling higher and not cripple the growth in any way. Based on the product vision and road map appropriate technology needs to be selected.</p>
                 </div>
@@ -39,7 +39,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-           <h5>Platform Expertise</h5>
+           <h5>PLATFORM EXPERTISE</h5>
            <p></p>
         </div>
     </div>
@@ -74,7 +74,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-          <h5><span class="highlight">Languages & </span>Framework <span class="highlight"></span></h5>
+          <h5><span class="highlight">LANGUAGES & </span>FRAMEWORK <span class="highlight"></span></h5>
           <p>We choose the right framework to suite the business needs in terms: ease of use, scalability, interoperability with standard technology, adaptability with emerging technologies and integration with back-end system.</p>
         </div>
         </div>
@@ -114,7 +114,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-           <h5>Codes Management</h5>
+           <h5>CODES MANAGEMENT</h5>
         </div>
         </div>
         <div class="row">
@@ -124,7 +124,7 @@
         </div>
         <div class="row">
             <div class="col-md-6">
-                <h5><span class="highlight">Testing </span>& Implementation</h5>
+                <h5><span class="highlight">TESTING </span>& IMPLEMENTATION</h5>
                     <p>We never settle for anything less than best, we iterate with the business and end-users to refine the interface periodically. 
                         With focus on cross-platform and cross-browser testing to achieve the best results.</p>
             </div>
@@ -150,7 +150,7 @@
                 <div class="col-md-1"></div>
                 <div class="col-md-10">
                <div class="text">
-               <h5>App Development</h5>
+               <h5>APP DEVELOPMENT</h5>
                <p>A community portal for Skill Development providing end-to-end solution 
                    for continious learning and collaboration. </p>
                <a routerLink="/projects/app-development"><h3>VIEW CASE STUDY  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
@@ -167,7 +167,7 @@
 <div class="services">
     <div class="container">
         <div class="services-heading">
-            <h5>Other Services</h5>
+            <h5>OTHER SERVICES</h5>
         </div>
         <div class="service-body">
             <div class="row">
