--- a/src/app/components/services/usability-testing/usability-testing.component.html
+++ b/src/app/components/services/usability-testing/usability-testing.component.html
@@ -3,7 +3,7 @@
       <div class="searvice-jumbotron-inner">
           <div class="row">
               <div class="col-md-5">
-                  <h1><span class="highlight"> Usability </span> Testing</h1>
+                  <h1><span class="highlight"> USABILITY </span> TESTING</h1>
                   <p>It’ll aid us to understand your objectives. We need to get to thebottom
                     of who you are, what you stand for and who you stand besid</p>
                       <h3><img src="/assets/images/services/ut-1.svg" alt="" /><span class="list">Undestanding Product</span></h3>
@@ -20,8 +20,8 @@
           </div>
           <div class="row spacing">
             <div class="col-md-6">
-              <h6>Understanding the
-                Product <span class="highlight">Prototype</span></h6>
+              <h6>UNDERSTANDING THE
+                PRODUCT <span class="highlight">PROTOTYPE</span></h6>
               <p>We choose the right framework to suite the business needs in terms:ease of use, scalability, interoperability
                 with standard technology, adaptability with emerging technologies and integration with back-end system</p>
             </div>
@@ -38,10 +38,11 @@
 <div class="service-step2">
   <div class="container">
       <div class="row">
-        <div class="col-md-6">
-        <h5><span class="highlight">Creating Scenario </span>
-          for the Users</h5>
+        <div class="col-md-5">
+        <h5><span class="highlight">CREATING SCENARIO </span>
+          FOR THE USERS</h5>
         </div>
+        <div class="col-md-1"></div>
           <div class="col-md-6">
             <p>We choose the right framework to suite the business needs in terms:ease of use, scalability, interoperability with standard technology, adaptability with emerging technologies and integration with back-end system</p>
             <h6><img src="/assets/images/services/check.svg" alt="" /><span> Gurella Testing</span></h6>
@@ -57,7 +58,7 @@
   <div class="container">
       <div class="row">
         <div class="col-md-12">
-         <h5>Understanding the <span class="highlight">User Behaviour</span></h5>
+         <h5>UNDERSTANDING THE <span class="highlight">USER BEHAVIOUR</span></h5>
         </div>
       </div>
       <div class="row">
@@ -67,7 +68,7 @@
       </div>
       <div class="row">
           <div class="col-md-6">
-          <h5>Report</h5>
+          <h5>REPORT</h5>
           <p>We choose the right framework to suite the business needs in terms:ease of use, scalability, interoperability with standard technology, adaptability with emerging technologies and integration with back-end system</p>
                </div>
       </div>
@@ -87,7 +88,7 @@
               <div class="col-md-1"></div>
               <div class="col-md-10">
             <div class="text"> 
-              <h5>Usability Testing for Vehicle</h5>
+              <h5>USABILITY TESTING FOR VEHICLE</h5>
                 <p>Portal for business (commercial network services for companies) with high level of scalability to have the services currently done manually.Portal for business (commercial network services for companies) with high level of scalability to have the services currently done manually. </p>
                 <a routerLink="/projects/automobile-usability"><h3>VIEW CASE STUDY  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
               </div>
@@ -103,7 +104,7 @@
 <div class="services">
   <div class="container">
       <div class="services-heading">
-          <h5>Other Services</h5>
+          <h5>OTHER SERVICES</h5>
       </div>
       <div class="service-body">
           <div class="row">
