--- a/src/app/components/services/ux-consulting/ux-consulting.component.html
+++ b/src/app/components/services/ux-consulting/ux-consulting.component.html
@@ -3,7 +3,7 @@
         <div class="searvice-jumbotron-inner">
             <div class="row">
                 <div class="col-md-5">
-                <h1><span class="highlight">User</span> Experience</h1>
+                <h1><span class="highlight">USER</span> EXPERIENCE</h1>
                 <p>Unravelling solutions for business problems in alignment with end-user expectations</p>
                     <h3><img src="/assets/images/services/ux-1.svg" alt="" /><span class="list">Undestanding Business</span></h3>
                     <h3><img src="/assets/images/services/ux-2.svg" alt="" /><span class="list">User Problems</span></h3>
@@ -24,7 +24,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-            <h5><span class="highlight">Stakeholder </span>business Discussion</h5>
+            <h5><span class="highlight">STAKEHOLDER </span>BUSINESS DISCUSSION</h5>
         </div>
             <div class="step-image">
                 <img src="/assets/images/services/ux2.svg" alt="" />
@@ -61,7 +61,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-            <h5><span class="highlight">Discovering </span>User Problems</h5>
+            <h5><span class="highlight">DISCOVERING </span>USER PROBLEMS</h5>
         </div>
         </div>
         <div class="row">
@@ -87,7 +87,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-           <h5>Supportive <span class="highlight">Solutions</span></h5>
+           <h5>SUPPORTING <span class="highlight">SOLUTIONS</span></h5>
         </div>
         </div>
         <div class="row">
@@ -111,7 +111,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-            <h5>Test Feature Viablity</h5>
+            <h5>TEST FEATURE VIABLITY</h5>
         </div>
     </div>
             <div class="row">
@@ -137,7 +137,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 m-first">
-              <h5>Market Launch</h5>  
+              <h5>MARKET LAUNCH</h5>  
             </div>
             <div class="col-md-6 m-last">
                 <p>With multiple iterations and checkpoints at various stages we ensure the prototype is ready for hassle freemarket development and market launch.</p>
@@ -163,7 +163,7 @@
                     <div class="col-md-1"></div>
                     <div class="col-md-10">
                 <div class="text">
-                <h5>Event Management</h5>
+                <h5>EVENT MANAGEMENT</h5>
                 <p>The event management portal builds a network of people from the comfort of their home and enables to find venues and services for their Big Day! </p>
                 <a routerLink="/projects/event-management"><h3>VIEW CASE STUDY  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
                 </div>
@@ -179,7 +179,7 @@
 <div class="services">
     <div class="container">
         <div class="services-heading">
-            <h5>Other Services</h5>
+            <h5>OTHER SERVICES</h5>
         </div>
         <div class="service-body">
             <div class="row">
