--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -6,13 +6,13 @@
       <div class="container">
           <div class="row">
               <div class="col-md-3">
-                <h2>We love working with</h2>
+                <h2>WE LOVE WORKING WITH</h2>
               </div>
               <div class="col-md-4">
                 <div class="image">
                 <img src="/assets/images/about-us/start-up.svg" />
               </div>
-                <h3>Founders of Start-ups</h3>
+                <h3>FOUNDERS OF START-UPS</h3>
                   <p>We've been there and we exactly know the struggles and what it takes to build a product from the scratch. We have the expertise to validate your ideas with the right process and to bring the right solutions for your target customers and ensure a successful launch.</p>
               </div>
               <div class="col-md-1"></div>
@@ -20,7 +20,7 @@
                 <div class="image">
                 <img src="/assets/images/about-us/manager.svg" />
               </div>
-                <h3>Product Managers/SME</h3>
+                <h3>PRODUCT MANAGERS/SME</h3>
                 <p>We work with mid-size or large-size organisations in designing or redesigning complex systems. Optimising the process to bring transformation to the legacy system.</p>
               </div>
             </div>
@@ -32,7 +32,7 @@
 <div class="our-mission">
 <div class="container">
   <div class="heading">
-  <h3>Our Mission and Goal</h3>
+  <h3>OUR MISSION AND GOAL</h3>
 </div>
   <div class="row">
     <div class="col-md-5">
