--- a/src/app/components/enquiry-footer/enquiry-footer.component.html
+++ b/src/app/components/enquiry-footer/enquiry-footer.component.html
@@ -5,7 +5,7 @@
       <div class="col-sm-1"></div>
       <div class="col-sm-8">
         <div class="row">
-        <h5>Lets connect and build a </h5><h2>better Product </h2>
+        <h5>Lets connect and build a better product</h5><h2> </h2>
       </div>
       </div>
       <div class="col-sm-2">
