--- a/src/app/components/projects/child-care/child-care.component.html
+++ b/src/app/components/projects/child-care/child-care.component.html
@@ -2,9 +2,9 @@
 <section class="child-care">
   <div class="container">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-8">
         <div class="heading">
-        <h1>Child Care Portal</h1>
+        <h1>CHILD CARE PORTAL</h1>
         <p>A worldwide NGO approached us for thier PoC on tablet based application for children in under-previlidged 
           countries. The application would be used on shared tablets by multiple children.
         </p>
@@ -27,7 +27,7 @@
 <section class="about-project">
   <div class="container">
     <div class="heading">
-      <h1>About Project</h1>
+      <h1>ABOUT PROJECT</h1>
     </div>
     <div class="row">
       <div class="col-md-5">
@@ -59,7 +59,7 @@
   <section class="solution">
     <div class="container">
     <div class="heading">
-      <h1>Solution</h1>
+      <h1>SOLUTION</h1>
     </div>
     <div class="row">
       <div class="col-md-5">
@@ -86,7 +86,7 @@
 <section class="other-works">
   <div class="container">
     <div class="other-works-heading">
-        <h3>Other Works</h3>
+        <h3>OTHER WORKS</h3>
     </div>
     <div class="other-works-body">
         <div class="row space">
