--- a/src/app/components/projects/construction-portal/construction-portal.component.html
+++ b/src/app/components/projects/construction-portal/construction-portal.component.html
@@ -2,8 +2,8 @@
 <section class="construction">
   <div class="container">
     <ul class="heading">
-      <li><h1>Construction</h1></li>
-      <li><h3>Portal</h3></li>
+      <li><h1>CONSTRUCTION</h1></li>
+      <li><h3>PORTAL</h3></li>
     </ul>
     <div class="row">
       <div class="col-md-6">
@@ -119,7 +119,7 @@
 <section class="web-view">
   <div class="container">
       <div class="heading">
-      <h1>Web View</h1>
+      <h1>WEB VIEW</h1>
       <div class="step-image">
       <img src="/assets/images/projects/web-development/web-dev.png">
     </div>
@@ -154,7 +154,7 @@
 <section class="solution">
   <div class="container">
   <div class="heading">
-    <h1>Solution</h1>
+    <h1>SOLUTION</h1>
   </div>
   <div class="row">
     <div class="col-md-5">
@@ -178,7 +178,7 @@
 <section class="other-works">
   <div class="container">
     <div class="other-works-heading">
-        <h3>Other Works</h3>
+        <h3>OTHER WORKS</h3>
     </div>
     <div class="other-works-body">
         <div class="row space">
