--- a/src/app/components/projects/health-care/health-care.component.html
+++ b/src/app/components/projects/health-care/health-care.component.html
@@ -1,9 +1,9 @@
 <!-- Health  care -->
 <section class="health-care">
   <div class="container">
-    <h1>Health Care System</h1>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-8">
+        <h1>HEALTH CARE SYSTEM</h1>
         <p>Holistic healthcares system for the healthcare centers in remote hamlets to enable doctors, healthcare workers.
           Adopted by Government of Tamil Nadu for implementation across all the primay healthcare centers.
         </p>
@@ -25,7 +25,7 @@
 <section class="about-project">
   <div class="container">
     <div class="heading">
-      <h1>About Project</h1>
+      <h1>ABOUT PROJECT</h1>
     </div>
     <div class="row">
       <div class="col-md-5">
@@ -47,7 +47,7 @@
 <section class="research">
   <div class="container">
     <div class="heading">
-      <h1>Research</h1>
+      <h1>RESEARCH</h1>
     </div>
     <div class="row">
       <div class="col-md-5">
@@ -101,7 +101,7 @@
     <section class="solution">
       <div class="container">
       <div class="heading">
-        <h1>Solution</h1>
+        <h1>SOLUTION</h1>
       </div>
       <div class="row">
         <div class="col-md-5">
@@ -143,7 +143,7 @@
 <section class="other-works">
   <div class="container">
     <div class="other-works-heading">
-        <h3>Other Works</h3>
+        <h3>OTHER WORKS</h3>
     </div>
     <div class="other-works-body">
         <div class="row space">
