--- a/src/app/components/projects/networking/networking.component.html
+++ b/src/app/components/projects/networking/networking.component.html
@@ -3,8 +3,8 @@
           <div class="container">
             <div class="row">
               <div class="col-md-5">
-                <h1>Network</h1>
-                <h2>Scalability</h2>
+                <h1>NETWORK</h1>
+                <h2>SCALABILITY</h2>
                 <p>Digital Transformation for India's largest telecom network service provider involved redesigning 
                   the experience for customers, SMEs and business users. It involved breaking down complex manual process 
                   of quote, billing & invoicing that spanned across multiple platforms and CRM systems with high level of 
@@ -18,7 +18,7 @@
             </div>
             <div class="row about-project">
               <div class="col-md-6">
-                <h2>About Project</h2>
+                <h2>ABOUT PROJECT</h2>
               </div>
               <div class="col-md-6">
                 <p>We were approached with redesign of their legacy system that required change in process from the ground-up. 
@@ -37,7 +37,7 @@
               </div>
               </div>
             </div>
-             <h2>Design Process</h2>
+             <h2>DESIGN PROCESS</h2>
            <div class="row design-process">
               <div class="col-sm-3">
                 <div class="step-image1">
@@ -84,7 +84,7 @@
             </div>
             <div class="row  research">
               <div class="col-md-4">
-                <h2>Research</h2>
+                <h2>RESEARCH</h2>
                 <p>Our UX Consultants reached out to customer across India to get qualitative information on the current experience, 
                   areas of enhancement, the expected features, and their feedback. The details received were meticulously analysed and the 
                 benchmarks were set.</p>
@@ -223,7 +223,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-6">
-                <h2> <img src="/assets/images/projects/networking/nm10.png" />Challenges</h2>
+                <h2> <img src="/assets/images/projects/networking/nm10.png" />CHALLENGES</h2>
                 <p></p>
                 <p>- Heavy dependency on Support Team</p>
                 <p>- Delay in communication</p>
@@ -232,7 +232,7 @@
                 <p>- Multiple follow-ups to customers on purchase and billing</p>
               </div>
               <div class="col-md-6">
-                <h2> <img src="/assets/images/projects/networking/nm10.png" />Needs</h2>
+                <h2> <img src="/assets/images/projects/networking/nm10.png" />NEEDS</h2>
                 <p>- Promoting online and on-time payment of invoices</p>
                 <p>- Converting existing offline users to online process</p>
                 <p>- Reducing the manual intervention</p>
@@ -247,7 +247,7 @@
           <div class="container">
             <div class="row">
               <div class="col-12">
-                <h2>Design</h2>
+                <h2>DESIGN</h2>
               </div>
             </div>
             <div class="row">
@@ -279,7 +279,7 @@
           <div class="container">
             <div class="row">
               <div class="col-12">
-                <h2>Interface Design</h2>
+                <h2>INTERFACE DESIGN</h2>
               </div>
             </div>
             <div class="row">
@@ -295,7 +295,7 @@
           <div class="container">
             <div class="row">
               <div class="col-12">
-                <h2>Atomic Components</h2>
+                <h2>ATOMIC COMPONENTS</h2>
               </div>
             </div>
             <div class="row">
@@ -311,7 +311,7 @@
           <div class="container">
             <div class="row">
               <div class="col-12">
-                <h2>Solution References</h2>
+                <h2>SOLUTION REFERENCES</h2>
               </div>
             </div>
             <div class="row">
@@ -351,7 +351,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-4">
-                <h2>Responsive Layout</h2>
+                <h2>RESPONSIVE LAYOUT</h2>
                   <p></p>
               </div>
               <div class="col-md-8">
@@ -369,7 +369,7 @@
 <section class="other-works">
   <div class="container">
     <div class="other-works-heading">
-        <h3>Other Works</h3>
+        <h3>OTHER WORKS</h3>
     </div>
     <div class="other-works-body">
       <div class="row space">
