--- a/src/app/components/services/visual-design/visual-design.component.html
+++ b/src/app/components/services/visual-design/visual-design.component.html
@@ -3,7 +3,7 @@
         <div class="searvice-jumbotron-inner">
             <div class="row">
                 <div class="col-md-7">
-                    <h5>Interface<span class="highlight"> Design</span></h5>
+                    <h5>INTERFACE<span class="highlight"> DESIGN</span></h5>
                     <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI.
                     </p>
                         <ul class="list-icons">
@@ -53,7 +53,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-        <h5>Mood Board</h5>
+        <h5>MOOD BOARD</h5>
     </div>
     </div>
         <div class="row">
@@ -86,7 +86,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-        <h5>Colors & Typography</h5>
+        <h5>COLORS & TYPOGRAPHY</h5>
     </div>
     </div>
         <div class="row">
@@ -107,7 +107,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-        <h5>Iconography</h5>
+        <h5>ICONOGRAPHY</h5>
     </div>
     </div>
         <div class="row">
@@ -230,7 +230,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-        <h5><span class="highlight">Layout </span>Setup</h5>
+        <h5><span class="highlight">LAYOUT </span>SETUP</h5>
     </div>
         </div>
         <div class="row">
@@ -256,7 +256,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-            <h5>Setup <span class="highlight">Style Guide</span></h5>
+            <h5>SETUP <span class="highlight">STYLE GUIDE</span></h5>
         </div>
         </div>
         <div class="row">
@@ -288,7 +288,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-           <h5>Illustrations</h5>
+           <h5>ILLUSTRATIONS</h5>
         </div>
         </div>
         <div class="row">
@@ -313,7 +313,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-            <h5>Logo Creation</h5>
+            <h5>LOGO CREATION</h5>
         </div>
         </div>
         <div class="row">
@@ -348,7 +348,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-            <h5>User Interface</h5>
+            <h5>USER INTERFACE</h5>
             </div>
         </div>
         <div class="row">
@@ -403,7 +403,7 @@
                     <div class="col-md-1"></div>
                     <div class="col-md-10">
                 <div class="text">
-                <h5>UX Ahead Startup Website</h5>
+                <h5>UX AHEAD STARTUP WEBSITE</h5>
                 <p>Portal for business to for Recruitment and Consulting - showcasing their services and portfolio of works.</p>
                 <a routerLink="/projects/marketing"><h3>VIEW CASE STUDY  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
                 </div>
@@ -419,7 +419,7 @@
 <div class="services">
     <div class="container">
         <div class="services-heading">
-            <h5>Other Services</h5>
+            <h5>OTHER SERVICES</h5>
         </div>
         <div class="service-body">
             <div class="row">
